# trust

./: CHANGELOG.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  LICENSE  PROJECT-TODO.md  PROJECT-TODO.zh-CN.md  README.md  README.zh-CN.md
.github/workflows/: ci.yml
crates/trust-cli/: Cargo.toml
crates/trust-cli/src/: add_rustdoc.rs  add_spec.rs  cli_args.rs  commands.rs  graph_loader.rs  incremental.rs  main.rs  tsconfig_resolve.rs
crates/trust-cli/tests/: cli_e2e.rs
crates/trust-cli/tests/fixtures/: array_length.ts  array_ok.ts  async_all_fetch_ok.ts  async_control_flow_ok.ts  async_mvp_compile_ok.ts  boolean_if.ts  break_unreachable.ts  break_while.ts  chain_deep_ok.ts  class_extends_ok.ts  class_super_ctor_ok.ts  class_super_invalid_fail.ts  class_this_method_ok.ts  class_this_scope_fail.ts  comma_ok.ts  definite_assign_fail.ts  definite_assign_ok.ts  discriminated_narrow_debug.ts  discriminated_narrow_else_ok.ts  discriminated_narrow_nested_ok.ts  discriminated_narrow_non_literal_fail.ts  discriminated_narrow_ok.ts  discriminated_narrow_simple.ts  discriminated_narrow_test.ts  dup_main.ts  early_return_unreachable.ts  empty_stmt.ts  export_default_async_main_ok.ts  export_default_main_ref_ok.ts  export_interface_ok.ts  export_main.ts  export_type_alias_ok.ts  fetch_post_init_ok.ts  fetch_response_ok.ts  fetch_stream_ok.ts  file_read_text_arg_type_fail.ts  file_read_text_async_compile_ok.ts  file_read_text_async_no_await_fail.ts  file_read_text_sync_compile_ok.ts  for_in_key_type_mismatch_fail.ts  (+69 more)
crates/trust-cli/tests/fixtures/trust_regex/: Trust.toml  main.ts
crates/trust-cli/tests/regression/: switch_fallthrough_regression.ts
crates/trust-driver/: Cargo.toml
crates/trust-driver/src/: cargo_runner.rs  crate_writer.rs  lib.rs  pipeline.rs
crates/trust-hir/: Cargo.toml
crates/trust-hir/src/: build.rs  codegen.rs  error.rs  ir.rs  json_parse_fold.rs  lib.rs  sem.rs
crates/trust-hir/src/codegen/: helpers.rs
crates/trust-hir/src/ir_cache/: codec.rs  disk.rs  mod.rs
crates/trust-hir/src/sem/: helpers.rs  mono.rs
crates/trust-lower/: Cargo.toml
crates/trust-lower/src/: lib.rs
crates/trust-manifest/: Cargo.toml
crates/trust-manifest/src/: lib.rs
crates/trust-parser/: Cargo.toml
crates/trust-parser/src/: import_utils.rs  lib.rs  module_graph.rs  resolve_imports.rs
crates/trust-stdlib/: Cargo.toml
crates/trust-stdlib/src/: console.rs  http.rs  io.rs  lib.rs  math.rs  number.rs
crates/trust_rt/: Cargo.toml
crates/trust_rt/src/: lib.rs
crates/ts2rs-cli/: Cargo.toml
crates/ts2rs-cli/src/: cli_args.rs  commands.rs  graph_loader.rs  incremental.rs  main.rs
crates/ts2rs-cli/tests/: cli_e2e.rs
crates/ts2rs-cli/tests/fixtures/: array_fail.ts  assign_simple.ts  async_control_flow_ok.ts  chain_call_ok.ts  circular_a.ts  circular_b.ts  class_basic_ok.ts  class_override_mismatch_fail.ts  console_stderr.ts  const_ok.ts  const_reassign_fail.ts  continue_while.ts  definite_assign_if_ok.ts  do_while_count.ts  export_from_fail.ts  fetch_response_ok.ts  fetch_stream_ok.ts  for_in_non_object_fail.ts  for_in_object_keys_ok.ts  for_loop.ts  generic_function_missing_type_args_fail.ts  generic_function_multi_infer_fail.ts  generic_function_ok.ts  generic_method_call_infer_ok.ts  import_default_wrong_binding_fail.ts  import_fail.ts  interface_generic_fail.ts  literal_type_ok.ts  member_length_ok.ts  method_call_ok.ts  multi_entry_main.ts  nullish_fail.ts  object_fail.ts  object_length_field.ts  optional_call_ok.ts  optional_chain_fail.ts  promise_all_fetch_ok.ts  promise_then_fail.ts  switch_fail.ts  template_ok.ts  (+5 more)
crates/ts2rs-cli/tests/regression/: README.md
crates/ts2rs-driver/: Cargo.toml
crates/ts2rs-driver/src/: cargo_runner.rs  crate_writer.rs  lib.rs  pipeline.rs
crates/ts2rs-hir/: Cargo.toml
crates/ts2rs-hir/src/: build.rs  codegen.rs  error.rs  ir.rs  json_parse_fold.rs  lib.rs  sem.rs
crates/ts2rs-hir/src/codegen/: helpers.rs
crates/ts2rs-hir/src/ir_cache/: codec.rs  disk.rs
crates/ts2rs-hir/src/sem/: helpers.rs  mono.rs
crates/ts2rs-lower/: Cargo.toml
crates/ts2rs-lower/src/: lib.rs
crates/ts2rs-parser/: Cargo.toml
crates/ts2rs-parser/src/: import_utils.rs  lib.rs  module_graph.rs  resolve_imports.rs
crates/ts2rs-trust-manifest/: Cargo.toml
crates/ts2rs_rt/: Cargo.toml
crates/ts2rs_rt/src/: lib.rs
examples/: README.md  Trust.toml  main.ts  math.ts  orm_ffi_demo.ts  strutil.ts
examples/crates/trust_ffi_facade/: Cargo.toml  build.rs
examples/crates/trust_ffi_facade/native/: trust_ffi_add.c
examples/crates/trust_ffi_facade/src/: lib.rs
examples/crates/trust_orm_facade/: Cargo.toml
examples/crates/trust_orm_facade/src/: lib.rs
test-ts/: main.ts  math.ts  test-ts.ts
