[workspace]
members = [
    "crates/trust-cli",
    "crates/trust-parser",
    "crates/trust-hir",
    "crates/trust-lower",
    "crates/trust-driver",
    "crates/trust-manifest",
    "crates/trust_rt",
    "examples/crates/trust_orm_facade",
    "examples/crates/trust_ffi_facade",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.74"
