[package]
name = "trust-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "trust"
path = "src/main.rs"

[dependencies]
bincode = "1.3"
clap = { version = "4.6.0", features = ["derive"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.27.0"
toml = "0.8"
trust-hir = { version = "0.1.0", path = "../trust-hir" }
trust-driver = { version = "0.1.0", path = "../trust-driver" }
trust-lower = { version = "0.1.0", path = "../trust-lower" }
trust-parser = { version = "0.1.0", path = "../trust-parser" }
trust-manifest = { version = "0.1.0", path = "../trust-manifest" }

[dev-dependencies]
tempfile = "3.27.0"
