[package]
name = "trust-hir"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bincode = "1.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swc_common = "21.0.0"
swc_ecma_ast = "23.0.0"
trust-manifest = { path = "../trust-manifest" }

[dev-dependencies]
trust-parser = { path = "../trust-parser" }
