[package]
name = "trust_stdlib"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde_json = "1.0"
urlencoding = "2"
tokio = { version = "1", features = ["macros", "fs"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }

# 默认不拉 `reqwest`/`tokio`：同步程序（大多数 e2e）在临时 crate 里编译快很多。
# `crate_writer` 按生成代码按需开启 `http` / `async-io`。
[features]
default = []
async-io = ["dep:tokio"]
http = ["dep:reqwest"]
