[package]
name = "ts2rs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ts2rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
ts2rs-driver = { version = "0.1.0", path = "../ts2rs-driver" }
ts2rs-lower = { version = "0.1.0", path = "../ts2rs-lower" }
ts2rs-parser = { version = "0.1.0", path = "../ts2rs-parser" }

[dev-dependencies]
tempfile = "3.27.0"
