[package]
name = "ts2rs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "ts2rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts2rs-hir = { version = "0.1.0", path = "../ts2rs-hir" }
ts2rs-driver = { version = "0.1.0", path = "../ts2rs-driver" }
ts2rs-lower = { version = "0.1.0", path = "../ts2rs-lower" }
ts2rs-parser = { version = "0.1.0", path = "../ts2rs-parser" }

[dev-dependencies]
tempfile = "3.27.0"
