[package]
name = "ts2rs-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ts2rs-trust-manifest = { path = "../ts2rs-trust-manifest" }
tempfile = "3.27.0"
thiserror = "2.0.18"
wait-timeout = "0.2"
ts2rs-hir = { path = "../ts2rs-hir" }
ts2rs-lower = { path = "../ts2rs-lower" }
ts2rs-parser = { path = "../ts2rs-parser" }
