[package]
name = "ts2rs-lower"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
swc_common = "21.0.0"
swc_ecma_ast = "23.0.0"
thiserror = "2.0.18"
ts2rs-hir = { path = "../ts2rs-hir" }

[dev-dependencies]
tempfile = "3.27.0"
ts2rs-parser = { path = "../ts2rs-parser" }
