[package]
name = "trust_orm_facade"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Thin facade around Diesel for Trust examples — query DSL stays in Rust only."

[dependencies]
diesel = { version = "2.2.6", features = ["sqlite"] }
# Same major as diesel’s libsqlite3-sys so `bundled` applies without duplicate crate graphs.
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
